force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/TPM_Overlap_Check_Conditions__mdt.object-meta.xml
<CustomObject>
    <description>The overlap checks will be done only for promotion templates and tactic types defined here</description>
    <label>Overlap Check Conditions</label>
    <pluralLabel>Overlap Check Conditions</pluralLabel>
</CustomObject>