force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/fields/Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Template__c</fullName>
    <label>Promotion Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>