force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/fields/Tactic_Type__c.field-meta.xml
<CustomField>
    <fullName>Tactic_Type__c</fullName>
    <description>Tactic Type</description>
    <label>Tactic Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>