force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/fields/TPM_PhaseForOverlapCheck__c.field-meta.xml
<CustomField>
    <fullName>TPM_PhaseForOverlapCheck__c</fullName>
    <description>Phase of promotion for which overlap check needs to run</description>
    <label>Phase For Overlap Check</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>