force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/fields/TPM_PromotionFieldsOverlapHide__c.field-meta.xml
<CustomField>
    <fullName>TPM_PromotionFieldsOverlapHide__c</fullName>
    <label>Promotion Fields Overlap Hide</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>