force-app/main/default/objects/TPM_Overlap_Check_Conditions__mdt/fields/TPM_TacticFieldsOverlapHide__c.field-meta.xml
<CustomField>
    <fullName>TPM_TacticFieldsOverlapHide__c</fullName>
    <label>Tactic Fields Overlap Hide</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>